<resources>
    <string name="app_name">圈乎</string>
    <string name="exit_app_toast">再按一次退出圈乎</string>
    <string name="load_fail">加载失败</string>
    <string name="net_error">当前网络不可用，请检查网络设置</string>
    <string name="net_failed">网络加载数据失败</string>
    <string name="no_data_now">暂无数据</string>
    <string name="no_net_work">当前网络不可用，请检查网络设置</string>
    <string name="input_right_phone">请输入正确的手机号</string>
    <string name="push_news_loading">正在提交信息</string>
    <string name="submit_news_loading">正在提交信息</string>
    <string name="action_fail">操作失败</string>
    <string name="easy_pay_open">已开启免密支付</string>
    <string name="easy_pay_close">已关闭免密支付</string>
    <string name="is_loading">正在加载...</string>
    <string name="loading_data_faile">获取数据失败</string>
    <string name="exit_fail">退出失败</string>
    <string name="exit_success">退出成功</string>
    <string name="exit_loading">正在退出...</string>
    <string name="check_loading">正在提交...</string>
    <string name="bind">绑定</string>
    <string name="had_bind">已绑定</string>
    <string name="cancel_bind">解绑</string>
    <string name="auth_phone">手机号</string>
    <string name="safety_info_note">为保障账户安全，请输入您真实的姓名和身份证号码。该信息一经设定，不能修改，请仔细填写。</string>
    <string name="hint_enter_name">请输入姓名</string>
    <string name="id_card">身份证号码</string>
    <string name="hint_enter_id_card">请输入身份证号码</string>
    <string name="safe_protect_info">安全保护信息</string>
    <string name="setting_safe_info">设置安全保护信息</string>
    <string name="unbind_card_fail">解绑失败</string>
    <string name="webo_login">微博登录</string>
    <string name="weibo">新浪微博</string>
    <string name="weixin_login">微信登录</string>
    <string name="weixin">微信</string>
    <string name="qq_login">腾讯QQ</string>
    <string name="qq">QQ</string>
    <string name="edit_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="name_length">姓名长度需在2～20位之间</string>
    <string name="id_length">身份证号码长度需为18位</string>
    <string name="setting_sucess">设置成功</string>
    <string name="reset_desc">为保障您的账户安全，请先在"安全保护信息"中设置姓名,身份证号等,然后才能重置支付密码。</string>
    <string name="verification_code">验证码</string>
    <string name="rest_pay_pw">重置支付密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="bind_phone">请先绑定手机号</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="pay_pw_explain"> 请输入6位数字的支付密码</string>
    <string name="safety_note">为保障账户安全，请及时设置安全保护信息</string>
    <string name="modify_pay_pw">修改支付密码</string>
    <string name="setting_pay_pw">设置支付密码</string>
    <string name="pay_pw_success">支付密码设置成功</string>
    <string name="reast_password">重置支付密码</string>
    <string name="open_small_pay_no_psw">开启小额免密支付功能</string>
    <string name="password_sucess">密码重置成功</string>
    <string name="edit_user_introduce">请输入个人简介</string>
    <string name="tab_home">首页</string>
    <string name="tab_find">发现</string>
    <string name="tab_reward">悬赏</string>
    <string name="tab_private_circle">私圈</string>
    <string name="tab_mine">我的</string>
    <string name="tab_content">内容</string>
    <string name="tab_person">用户</string>
    <string name="tab_circle">圈子</string>
    <string name="max_size_choose_pic_hint">最多选择%1$d张</string>
    <string name="comment">评论</string>
    <string name="send">发送</string>
    <string name="upload_pic">上传图片</string>
    <string name="upload_video">上传视频</string>
    <string name="click_to_try_again">点击重试</string>
    <string name="login">登录</string>
    <string name="request_failed">请求失败</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="sd_card_un_exist">SD卡不存在</string>
    <string name="video_format">格式: </string>
    <string name="video_time">时长: </string>
    <string name="video_size">大小: </string>
    <string name="is_processing">正在处理，请稍后</string>
    <string name="is_upload_video">视频上传中</string>
    <string name="is_upload_pic">图片上传中</string>
    <string name="all_pic">所有图片</string>
    <string name="publish">发布</string>
    <string name="pic">图片</string>
    <string name="finish">完成</string>
    <string name="zhang">张</string>
    <string name="retry_upload">重新上传</string>
    <string name="video_upload_failed">视频上传失败</string>
    <string name="camera">相机</string>
    <string name="not_found_pic">抱歉，你选择的图片不存在</string>
    <string name="not_found_video">抱歉,没有找到该视频资源</string>
    <string name="not_found_audio">抱歉,没有找到该音频资源</string>
    <string name="file_too_big">文件大小不得超过500M</string>
    <string name="error_to_found_video">抱歉,获取视频资源失败</string>
    <string name="error_to_found_audio">抱歉,获取音频资源失败</string>
    <string name="wait_publish_video">请等待视频上传成功后发布</string>
    <string name="wait_publish_audio">请等待音频上传成功后发布</string>
    <string name="editor_two_show_video_text">这里显示插入的视频文件</string>
    <string name="editor_two_show_audio_text">这里显示插入的音频文件</string>
    <string name="editor_two_show_video_audio_text">这里显示插入的视频、音频文件</string>
    <string name="editor_two_cancel">是否要离开当前页面？</string>
    <string name="editor_two_publish_fail">发布失败,请稍后再试。</string>
    <string name="editor_two_publish_success">发布成功</string>
    <string name="editor_two_publish_ing">正在处理中...</string>
    <string name="editor_two_page_fail">封面上传失败</string>
    <string name="editor_two_image_fail">图片上传失败</string>
    <string name="editor_two_audio_fail">音频上传失败</string>
    <string name="editor_two_video_image_fail">视频图片上传失败</string>
    <string name="play_audio_fail">播放音频失败</string>
    <string name="share">分享</string>
    <string name="add_text">添加正文</string>
    <string name="add_text_pic_here">在这里，输入文字或者添加图片、视频</string>
    <string name="delete">删除</string>
    <string name="text">文字</string>
    <string name="video">视频</string>
    <string name="audios">音频</string>
    <string name="show_video_file">这里显示插入的视频文件</string>
    <string name="play">点击播放</string>
    <string name="cannot_add_content">您还没有添加发布内容</string>
    <string name="add_content">添加正文</string>
    <string name="editor_content_null">正文详情不能为空</string>
    <string name="xuanbei">选被</string>
    <string name="quanbi_zhuanfa">圈币转发过的</string>
    <string name="format_mp4">格式:mp4</string>
    <string name="time_long">"时长: "</string>
    <string name="size">大小:</string>
    <string name="format">格式:</string>
    <string name="choose_one_audio_publish">请选择一个音频作品发布</string>
    <string name="anonymous_publish">匿名发布</string>
    <string name="i_am">我是</string>
    <string name="unallowed_join_hint">该群已设置不允许任何人加入</string>
    <string name="mine_my_account">我的账户</string>
    <string name="consumer_account">消费账户</string>
    <string name="account_profit">奖励值</string>
    <string name="income_account">收益账户</string>
    <string name="redbag_record">红包记录</string>
    <string name="bank_card">银行卡</string>
    <string name="cost_detail_v3">消费明细</string>
    <string name="account_remain">账户余额</string>
    <string name="youranbi">悠然币</string>
    <string name="recharge">充值</string>
    <string name="all_point">奖励值</string>
    <string name="duihuan_yrb">您暂无可兑换悠然币</string>
    <string name="tixian_yrb">您暂无可提现悠然币</string>
    <string name="yizhi">圈乎</string>
    <string name="account_balance">账户余额</string>
    <string name="my_income_money">账户余额：</string>
    <string name="youran_currency">悠然币</string>
    <string name="transfer_cost_account">兑换到消费账户</string>
    <string name="draw_title">提现</string>
    <string name="reward_rules">《平台奖励规则》</string>
    <string name="unbind_bank_card">解绑银行卡</string>
    <string name="set_default">设为默认</string>
    <string name="mine_person_area">地区</string>
    <string name="mine_person_save">保存</string>
    <string name="mine_person_locate">定位当前位置</string>
    <string name="is_location">正在定位...</string>
    <string name="mine_person_all">全部</string>
    <string name="had_check">已选中</string>
    <string name="location_permission">圈呼要使用定位权限</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="mine_person_info">个人信息</string>
    <string name="start_page_jump">跳过</string>
    <string name="second">秒</string>
    <string name="mine_person_photo">头像</string>
    <string name="mine_person_nick">昵称</string>
    <string name="mine_person_scan">我的二维码</string>
    <string name="mine_person_sex">性别</string>
    <string name="mine_person_sign">个人签名</string>
    <string name="mine_person_brief">个人简介</string>
    <string name="mine_person_city">城市</string>
    <string name="change_bank_card">更换银行卡</string>
    <string name="setting_success">设置成功</string>
    <string name="unbind_card_success">解绑成功</string>
    <string name="location_permission_run">圈乎要使用定位权限，否则app可能无法正常运行</string>
    <string name="carme_sd_permission">圈乎要使用摄像头,使用sd卡权限</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上滑加载更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="max_size_text_hint">内容不能超过%1$d个字</string>
    <string name="user_create_private_group_num">创建的私圈  (%1$d)</string>
    <string name="user_join_private_group_num">加入的私圈  (%1$d)</string>
    <string name="private_group">私圈</string>
    <string name="private_group_all">全部私圈</string>
    <string name="private_group_no_more">没有更多了</string>
    <string name="private_group_about">关于私圈</string>
    <string name="private_group_essence_no_more">加入私圈，可浏览更多私圈精华</string>
    <string name="private_group_total">共%1$d个，查看全部私圈</string>
    <string name="private_group_create_tip">私圈是提供个性化服务和功能的场所,您可以在私圈内发布各类型资源、活动和话题等,用以吸引汇集其他用户成为私圈成员,形成深度互动,进一步快速实现资源变现。</string>
    <string name="private_group_create_submit">提交中···</string>
    <string name="private_group_joined_user">%1$d人加入</string>
    <string name="private_group_status_0">未审</string>
    <string name="private_group_status_1">通过</string>
    <string name="private_group_status_2">审核未通过</string>
    <string name="private_group_status_3">上线</string>
    <string name="private_group_status_4">下线</string>
    <string name="private_group_login_tip">登录才能创建私圈</string>
    <string name="private_group_no_create">还没有创建私圈哦~</string>
    <string name="private_group_no_join">还没有加入私圈哦~</string>
    <string name="private_group_show_all">查看全部私圈</string>
    <string name="private_group_apply_for">申请创建私圈</string>
    <string name="private_group_apply_for_success">申请提交成功</string>
    <string name="private_group_apply_for_tip">我们将尽快处理您的申请，\n请关注系统通知！</string>
    <string name="private_group_from_group">来自私圈 %1$s</string>
    <string name="private_group_from_circled">来自圈子 %1$s</string>
    <string name="private_group_free">免费</string>
    <string name="private_group_youran_price">%1$d悠然币</string>
    <string name="private_group_essence_scan">%1$d 阅读</string>
    <string name="private_group_join_way_change">修改加入私圈方式</string>
    <string name="private_group_choose">选择所属圈子</string>
    <string name="private_group_join_price_max">申请加入私圈金额不能超过500悠然币</string>
    <string name="private_group_join_price_min">申请加入私圈金额不能低于1悠然币</string>
    <string name="create_group">创建讨论组</string>
    <string name="search_team">搜索群</string>
    <string name="send_check_code">发送验证码</string>
    <string name="phone_code">验证码登录</string>
    <string name="input_check_code">请输入验证码</string>
    <string name="no_money">余额不足，请先充值</string>
    <string name="to_recharge">去充值</string>
    <string name="confirm_change">确认兑换</string>
    <string name="consume_account">兑换至消费账户:</string>
    <string name="youranbi_count">请输入兑换悠然币数量</string>
    <string name="possible_recharge">可兑换:</string>
    <string name="mine_my_contacts">通讯录</string>
    <string name="add_friends">添加好友</string>
    <string name="name">姓名</string>
    <string name="income">收支</string>
    <string name="mingcheng">名称</string>
    <string name="time">时间</string>
</resources>