<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rolle_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_add_friend"
            style="@style/MsgFragMenuBtnStyle"
            android:text="@string/add_friends" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/DefaultHLineStyle" />

            <TextView
                android:id="@+id/btn_contact"
                style="@style/MsgFragMenuBtnStyle"
                android:text="@string/mine_my_contacts" />

            <View style="@style/DefaultHLineStyle" />

            <TextView
                android:id="@+id/btn_create_discussion_group"
                style="@style/MsgFragMenuBtnStyle"
                android:text="@string/create_group" />

            <View style="@style/DefaultHLineStyle" />

            <TextView
                android:id="@+id/btn_create_group"
                style="@style/MsgFragMenuBtnStyle"
                android:text="@string/create_team" />

            <View style="@style/DefaultHLineStyle" />

            <TextView
                android:id="@+id/btn_search_group"
                style="@style/MsgFragMenuBtnStyle"
                android:text="@string/search_team" />
        </LinearLayout>

        <View style="@style/DefaultHLineStyle" />

        <TextView
            android:id="@+id/btn_setting"
            style="@style/MsgFragMenuBtnStyle"
            android:text="@string/setting" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_cancel"
        style="@style/MsgFragMenuBtnStyle"
        android:layout_marginBottom="@dimen/px30"
        android:layout_marginTop="@dimen/px14"
        android:background="@drawable/rolle_white_bg"
        android:text="@string/cancel"
        android:textColor="@color/color_333333" />
</LinearLayout>