<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_pop_white_btn"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/DefaultTvStyle"
        android:layout_marginBottom="@dimen/px130"
        android:layout_marginTop="@dimen/px130"
        android:includeFontPadding="false"
        android:text="@string/no_money"
        android:textSize="@dimen/font_48" />

    <View style="@style/line_horizontal_gray_s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_bottom_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/px32"
            android:text="@string/cancel"
            android:textColor="@color/font_gray_l"
            android:textSize="@dimen/px50" />

        <View style="@style/line_vertical_gray_s" />

        <TextView
            android:id="@+id/btn_recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/px32"
            android:text="@string/to_recharge"
            android:textColor="@color/font_color_blue"
            android:textSize="@dimen/px50" />
    </LinearLayout>

</LinearLayout>