<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/layout_login_webo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px130"
            android:drawablePadding="@dimen/px30"
            android:drawableTop="@mipmap/ic_login_sina"
            android:gravity="center_horizontal"
            android:textColor="@color/color_999999"
            android:visibility="visible"
            android:text="@string/weibo"
            />

        <TextView
            android:id="@+id/layout_login_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/px130"
            android:drawablePadding="@dimen/px30"
            android:drawableTop="@mipmap/ic_login_wx"
            android:gravity="center_horizontal"
            android:textColor="@color/color_999999"
            android:text="@string/weixin"
            />

        <TextView
            android:id="@+id/layout_phone_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/px30"
            android:drawableTop="@mipmap/ic_login_sina"
            android:gravity="center_horizontal"
            android:textColor="@color/color_999999"
            android:text="@string/phone_code"
            />

    </LinearLayout>

</LinearLayout>